# modAI-Asistance

./: .dockerignore  .gitignore  Dockerfile  LICENSE  QUICKSTART.md  README.md  main.tsx  modAI.command  package-lock.json  package.json  projectOnboardingState.ts
.github/: release-notes-v0.1.5.md
.github/workflows/: pages.yml  release.yml
.modai/plugins/: mac-diagnostics.json
commands/: install.tsx  review.ts  statusline.tsx  ultraplan.tsx
commands/desktop/: index.ts
commands/doctor/: index.ts
commands/feedback/: index.ts
commands/mcp/: addCommand.ts
commands/model/: index.ts
commands/passes/: index.ts
commands/plugin/: index.tsx
commands/remote-setup/: index.ts
commands/stats/: index.ts
commands/status/: index.ts
commands/stickers/: index.ts
components/: BypassPermissionsModeDialog.tsx  ClaudeMdExternalIncludesDialog.tsx  ConsoleOAuthFlow.tsx  DesktopHandoff.tsx  IdeOnboardingDialog.tsx  ModelPicker.tsx  Onboarding.tsx  OutputStylePicker.tsx  RemoteEnvironmentDialog.tsx  ResumeTask.tsx  Stats.tsx
components/DesktopUpsell/: DesktopUpsellStartup.tsx
components/HelpV2/: HelpV2.tsx
constants/: system.ts
docs/: deployment.md  index.html  manifest.webmanifest  site.css  site.js
entrypoints/: cli.tsx
modai/: README.md
scripts/: build-macos-app.mjs  build-tauri-macos-app.mjs  build-tauri-portable-app.mjs  build.mjs  generate-brand-assets.mjs  icon-helpers.mjs  prepare-src.mjs  run-tests.mjs  stub-modules.mjs  sync-src.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: modAI.icns
src-tauri/src/: main.rs
(+108 files in other folders)
