[package]
name = "modai-tauri"
version = "0.1.0"
edition = "2021"
description = "Tauri shell for modAI ultralight"

[build-dependencies]
tauri-build = { version = "2" }

[dependencies]
tauri = { version = "2", features = ["image-png"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true
